[BUG] search on IE

--- a/src/control/Search.css
+++ b/src/control/Search.css
@@ -294,7 +294,7 @@
   content:"";
   position: absolute;
   left: 50%;
-  right: 50%;
+  top: 50%;
   width: .6em;
   height: .6em;
   border: .1em solid currentColor;
@@ -305,7 +305,7 @@
   content:"";
   position: absolute;
   left: 50%;
-  right: 50%;
+  top: 50%;
   width: .2em;
   height: .2em;
   background-color: transparent;
